--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,10 @@ spring.datasource.username=root
 spring.datasource.password=senai
 # Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl=true
+youtube.api.security.token.secret=${YOUTUBE_SECRET}
