exception handler added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl=true
 youtube.api.security.token.secret=${YOUTUBE_SECRET}
+server.error.include-stacktrace=never
