--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl=true
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+# Youtube API key
 youtube.api.security.token.secret=${YOUTUBE_SECRET}
 server.error.include-stacktrace=never
