--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 # Mudar o /test
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=senai
 # Hibernate Properties
