--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,9 @@ spring.jpa.hibernate.ddl=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 spring.sql.init.encoding=UTF-8
+server.error.include-stacktrace=never
 # Youtube API key
 youtube.api.security.token.secret=${YOUTUBE_SECRET}
-server.error.include-stacktrace=never
+api.security.token.secret=${JWT_SECRET:sa_comunitube_1234}
+api.security.token.issuer=sa_comunitube
+api.security.token.expiration_min=60
