--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,5 @@ server.error.include-stacktrace=never
 youtube.api.security.token.secret=${YOUTUBE_SECRET}
 api.security.token.secret=${JWT_SECRET:sa_comunitube_1234}
 api.security.token.issuer=sa_comunitube
-api.security.token.expiration_min=60
+api.security.token.expiration.min=60
+api.security.token.update.expiration.h=24
