--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,5 @@ server.error.include-stacktrace=never
 youtube.api.security.token.secret=${YOUTUBE_SECRET}
 api.security.token.secret=${JWT_SECRET:sa_comunitube_1234}
 api.security.token.issuer=sa_comunitube
-api.security.token.access.expiration.min=60
-api.security.token.refresh.expiration.h=24
+api.security.token.expiration.access.min=60
+api.security.token.expiration.refresh.min=1440
