--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
